# Pangolin

./: .travis.yml  CMakeLists.txt  README.md  package.xml
.github/workflows/: build.yml  cmake-multi-platform.yml
components/pango_core/: CMakeLists.txt
components/pango_core/include/pangolin/: platform.h
components/pango_core/src/: file_utils.cpp
components/pango_opengl/: CMakeLists.txt
components/pango_video/: CMakeLists.txt
components/pango_video/include/pangolin/video/drivers/: uvc_mediafoundation.h
components/pango_video/src/drivers/: uvc_mediafoundation.cpp
components/pango_windowing/: CMakeLists.txt
components/pango_windowing/src/: display_x11.cpp
examples/HelloPangolin/: CMakeLists.txt  main.cpp
examples/SimpleDisplay/: main.cpp
include/pangolin/gl/: gl.hpp
scripts/: install_prerequisites.sh
src/: CMakeLists.txt  PangolinConfig.cmake.in
src/display/: display.cpp  view.cpp
src/display/device/: cursor-settings.h  display_osx.mm  display_wayland.cpp  display_x11.cpp
